# Cafe.Core

./: .gitignore  CMakeLists.txt  conanfile.py
Test/: BitField.Test.cpp  CMakeLists.txt  Functions.Test.cpp  TypeTraits.Test.cpp  Utility.Test.cpp
src/Cafe/Misc/: AnyView.h  BitField.h  ControlFlow.h  Export.h  Functions.h  Lazy.h  Math.h  NumericInterval.h  Optional.h  Ratio.h  Scope.h  TypeTraits.h  Utility.h  UtilityMacros.h
